
name:                                vslam
version:                         0.1.0
synopsis:                        FastSLAM 2.0 implementation in a monocular visual setup.
-- The license under which the package is released.
license:                         OtherLicense
author:                            Pavel Potocek
maintainer:                    pavelpotocek@gmail.com
category:                        Math
build-type:                    Simple
extra-source-files:    README.md
cabal-version:             >= 1.6



executable RosMain
    main-is: RosMain.hs                        
    
    -- Modules included in this executable, other than Main.
    other-modules: RosInterface         
    cpp-options: "cpp/main.h"   
    
    other-extensions:        ForeignFunctionInterface, BangPatterns
    
    -- Other library packages from which modules are imported.
    build-depends:             
        base >= 4 && < 5,
        spatial-math,
        hmatrix,
        random-fu,
        random-extras,
        random-source,
        normaldistribution,
        pretty-show,
        directory,
        containers,
        bytestring
    
    -- Directories containing source files.
    -- hs-source-dirs:            
    
    -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
    build-tools:                 c2hs
    


executable vslam
    main-is: Display.hs                        
    
    -- Modules included in this executable, other than Main.
    -- other-modules:             
    
    other-extensions:        ForeignFunctionInterface, BangPatterns
    
    -- Other library packages from which modules are imported.
    build-depends:             
        base >= 4 && < 5,
        GLUT,
        X11,
        spatial-math,
        hmatrix,
        random-fu,
        random-extras,
        random-source,
        normaldistribution,
        linear,
        directory,
        containers,
        bytestring,
        not-gloss
    
    -- Directories containing source files.
    -- hs-source-dirs:            
    
    -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
    --build-tools:                 chs
    
